<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="es.architectcoders.mascotas.ui.profile.viewmodel.ProfileViewModel" />

        <variable
            name="user"
            type="es.architectcoders.domain.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/containerUserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/rvFavorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:fitsSystemWindows="true"
                        app:load_base64="@{user.photoUrl}"
                        app:layout_collapseMode="pin" />

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:text="@{user.name}"
                        android:layout_gravity="center"
                        android:textColor="@color/color_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/levelContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:text="@{viewmodel.level}"
                            android:textColor="@color/color_black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/iconLevelInfo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/icon_level_info"
                            android:padding="10dp"
                            android:src="@drawable/ic_info_black"
                            app:layout_constraintLeft_toRightOf="@+id/textLevel"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:text="@{viewmodel.address}"
                        android:textColor="@color/color_black" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:numStars="5"
                            app:rating="@{viewmodel.rating}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_example"
                            android:textColor="@color/color_black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="@id/ratingBar"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <!-- Following -->
                    <LinearLayout
                        android:id="@+id/followContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/followingNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="3dp"
                            android:gravity="center"
                            android:text="@string/following_number_example"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/followingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:text="@string/following"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/followedNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:text="@string/followed_example"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/followedText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="3dp"
                            android:gravity="center"
                            android:text="@string/followed"
                            android:textColor="@color/color_black" />
                    </LinearLayout>


                    <!-- Solds -->
                    <LinearLayout
                        android:id="@+id/soldContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/soldNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="3dp"
                            android:gravity="center"
                            android:text="@string/sold_example"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/soldText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:text="@string/sold"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/buyNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="12dp"
                            android:gravity="center"
                            android:text="@string/buy_example"
                            android:textColor="@color/color_black" />

                        <TextView
                            android:id="@+id/buyText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="3dp"
                            android:gravity="center"
                            android:text="@string/buy"
                            android:textColor="@color/color_black" />
                    </LinearLayout>

                    <!-- Tabs and ViewPager -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/color_primary"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            style="@style/Widget.MaterialComponents.TabLayout"
                            app:tabMaxWidth="0dp"
                            app:tabGravity="fill"
                            app:tabMode="fixed"
                            app:tabSelectedTextColor="@color/color_white"
                            app:tabTextColor="@color/color_primary_dark" >

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/on_sale" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/favorites"/>

                        </com.google.android.material.tabs.TabLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:advert_items="@{viewmodel.adverts}"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/containerUserData"
                    app:spanCount="2"
                    tools:listitem="@layout/view_advert" />
            </LinearLayout>
        </ScrollView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressFavorite"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visible="@{viewmodel.loading}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>