<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import
            alias="TextUtils"
            type="android.text.TextUtils" />

        <variable
            name="viewmodel"
            type="es.architectcoders.mascotas.ui.advert.viewmodel.NewAdvertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:onClick="@{() -> viewmodel.clickOnPicker()}"
                    app:invisible="@{viewmodel.adverts.photoBase64==null}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:load_base64="@{viewmodel.adverts.photoBase64}" />

                <ImageView
                    android:id="@+id/createImage"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:onClick="@{() -> viewmodel.clickOnPicker()}"
                    android:scaleType="center"
                    android:src="@drawable/ic_photo_camera"
                    app:invisible="@{viewmodel.adverts.photoBase64!=null}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginTop="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:text="@={viewmodel.adverts.title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16dp"
                    android:layout_marginTop="@dimen/space_16dp"
                    android:layout_marginEnd="@dimen/space_16dp"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:text="@={viewmodel.adverts.price}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/login"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_40dp"
                    android:layout_marginBottom="@dimen/space_16dp"
                    android:onClick="@{() -> viewmodel.createAdvert()}"
                    android:text="@string/create"
                    app:layout_constraintEnd_toEndOf="@+id/priceEditText"
                    app:layout_constraintStart_toStartOf="@+id/priceEditText"
                    app:layout_constraintTop_toBottomOf="@+id/priceEditText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visible="@{viewmodel.loading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
